# claude-code-starter-kit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mcp_server.py  pyproject.toml
.claude/: settings.json
.claude/agents/: bug-hunter.md  code-reviewer.md  security-auditor.md  test-engineer.md
.claude/commands/: detailed-review.md  docs.md  fix-bugs.md  monitor.md  refactor.md  review.md  security-check.md  security-scan.md  test-coverage.md  test.md
.claude/knowledge-base/: security-checklist.md  testing-guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: claude-review.yml  publish.yml
